# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2022 Jan Delgado
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-jled"
description = "Non-blocking LED controlling library"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jan Delgado", email = "jdelgado@gmx.net"}
]
urls = {Homepage = "https://github.com/jandelgado/jled-circuitpython"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "jled",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["jled"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "--cov jled"
testpaths = [
    "tests",
]
